django/api/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-api
  labels:
    app: django-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-api
  template:
    metadata:
      labels: 
        app: django-api
    spec:
      containers:
        - name: django-api
          image: acrappelent.azurecr.io/django-api:v0.3
          ports:
            - containerPort: 8000
          volumeMounts:
          - name: secrets
            mountPath: "/mnt/secrets-store"
            readOnly: true
      volumes:
      - name: secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "django-api-secretproviderclass"
