django/api/deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: django-api-service
spec:
  selector:
    app: django-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
