django/api/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-django-api
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - dev.api.appelent.com
    secretName: tls-secret-django-api-dev
  rules:
  - host: dev.api.appelent.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: django-api-service
            port:
              number: 8000
  ingressClassName: nginx
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-django-api
#   annotations:
#     #nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     cert-manager.io/cluster-issuer: letsencrypt
#     #nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   tls:
#   - hosts:
#     - dev.oauth.appelent.com
#     secretName: tls-secret-django-oauth-dev
#   rules:
#   - host: dev.oauth.appelent.com
#     http:
#       paths:
#       - path: /(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: django-api-service
#             port:
#               number: 8000
#   ingressClassName: nginx
